# rbe500_team2_pa3

./: README.md  pd_controll_plot.m  vel_control_plot.m
Submission/: RBE500_PA3_Team 2.tex
catkin_ws/: p_control_plot.txt  pd_control_plot.txt  velocity_control_plot.txt
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
catkin_ws/devel/include/scara_forward_kinematics/: scara_robot_pose.h
catkin_ws/devel/include/scara_inverse_kinematics/: poseJoints.h  poseJointsRequest.h  poseJointsResponse.h
catkin_ws/devel/include/scara_pd_controller/: JointControlReference.h  JointControlReferenceRequest.h  JointControlReferenceResponse.h
catkin_ws/devel/include/scara_velocity_controller/: VelocityControlReference.h  VelocityControlReferenceRequest.h  VelocityControlReferenceResponse.h
catkin_ws/devel/include/scara_velocity_kinematics/: ee_to_joint_velocity.h  ee_to_joint_velocityRequest.h  ee_to_joint_velocityResponse.h  joint_to_ee_velocity.h  joint_to_ee_velocityRequest.h  joint_to_ee_velocityResponse.h
catkin_ws/devel/lib/pkgconfig/: scara_description.pc  scara_forward_kinematics.pc  scara_gazebo.pc  scara_inverse_kinematics.pc  scara_pd_controller.pc  scara_velocity_controller.pc  scara_velocity_kinematics.pc
catkin_ws/devel/lib/scara_inverse_kinematics/: inverse_client  inverse_server
catkin_ws/src/scara_robot/scara_description/: package.xml
catkin_ws/src/scara_robot/scara_forward_kinematics/: CMakeLists.txt  (+1 more)
catkin_ws/src/scara_robot/scara_gazebo/: package.xml
catkin_ws/src/scara_robot/scara_gazebo/launch/: scara_world.launch
(+89 files in other folders)
