<package>
  <name>scara_gazebo</name>
  <version>0.1.0</version>
  <description>scara_gazebo</description>
  <maintainer email="chris@todo.todo">chris</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_publish</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>
  </export>
</package>
